[package]
name = "arco-uc"
description = "Unity Catalog OSS API facade for Arco: OpenAPI-parity UC compatibility surface"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = ["jwt-aws-lc"]
full = ["gcp", "aws", "azure"]
gcp = ["arco-core/gcp", "arco-catalog/gcp", "dep:gcp_auth"]
aws = ["arco-core/aws", "arco-catalog/aws"]
azure = ["arco-core/azure", "arco-catalog/azure"]
jwt-aws-lc = ["arco-core/jwt-aws-lc", "arco-catalog/jwt-aws-lc", "arco-delta/jwt-aws-lc"]
jwt-rust-crypto = [
    "arco-core/jwt-rust-crypto",
    "arco-catalog/jwt-rust-crypto",
    "arco-delta/jwt-rust-crypto",
]

[dependencies]
arco-core = { path = "../arco-core", default-features = false }
arco-catalog = { path = "../arco-catalog", default-features = false }
arco-delta = { path = "../arco-delta", default-features = false }

# HTTP
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# IDs
ulid = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# OpenAPI
utoipa = { version = "5.5.0", features = ["axum_extras"] }

# Logging/tracing
tracing = { workspace = true }

# Credential vending (GCS OAuth2) - optional, enabled by `gcp` feature
gcp_auth = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
serde_yaml = { workspace = true }
