[package]
name = "arco-worker-contract"
description = "Versioned worker protocol contracts for embedded Arco deployments"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
utoipa = { version = "5.5.0", features = ["chrono"] }

