# python/arco/pyproject.toml
[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "arco-flow"
version = "0.2.1"
description = "Python SDK for Arco Flow orchestration platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Arco Team", email = "team@arco.dev" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["data", "orchestration", "pipeline", "etl", "dataops"]

dependencies = [
    "typer>=0.25.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "httpx>=0.25.0",
    "rich>=14.3.4",
    "ulid-py>=1.1.0",
    "uuid6>=2024.7.10",
    "structlog>=23.3.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.152.4",
    "ruff>=0.15.14",
    "mypy>=1.20.1",
    "pre-commit>=4.6.0",
]

[project.scripts]
arco-flow = "arco_flow.cli.main:app"

[project.urls]
Documentation = "https://docs.arco.dev/arco-flow"
Repository = "https://github.com/arco/arco"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/arco_flow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "-q", "--strict-markers", "--strict-config"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/arco_flow"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
fail_under = 80
show_missing = true

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
namespace_packages = false
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
