[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"
toml = "0.8"
semver = "1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
arco-core = { path = "../../crates/arco-core" }
arco-catalog = { path = "../../crates/arco-catalog" }
